# cmake-101-app

./: README.md  build.sh
hello-world-app/: CMakeLists.txt
hello-world-app/src/: CMakeLists.txt  main.cpp
hellolib/: CMakeLists.txt
hellolib/cmake/: gtest.cmake
hellolib/include/: hellolib.h
hellolib/src/: hellolib.cpp  hellolib.h
hellolib/tests/: CMakeLists.txt
hellolib/tests/src/: hellolib_test.cpp
worldlib/: CMakeLists.txt
worldlib/include/: worldlib.h
worldlib/src/: worldlib.cpp
worldlib/tests/: CMakeLists.txt
worldlib/tests/src/: worldlib_test.cpp
